# relocalization

./: .flake8  MANIFEST.in  README.md  mypy.ini  pyproject.toml
examples/: simple_def_exp.py  simple_parse_wb.py
flexi/: config.py  treevis.py  workbench.py
flexi/gf/: gf_ast.py  gf_shell.py  gfxml.py  magma.py  mast.py
flexi/magma/: README.md  generate_combinations.py
flexi/magma/combinations/: DLTenMagma.gf  XDLTenMagma.gf  XDLTenMagmaEng.gf  XDMagma.gf  XDMagmaEng.gf
flexi/magma/dollarmath/: DollarMathConcr.gf
flexi/magma/magma/: Magma.gf  MagmaEng.gf  MagmaFunctor.gf
flexi/magma/testlex/: TestEngLex.gf
flexi/magma/xml/: RglXmlEng.gf  Xml.gf  XmlMagma.gf  XmlMagmaFunctor.gf
flexi/parsing/: document.py  magma.py  mast.py
flexi/test/: test_gf.py  test_grammar.py  test_mast_parsing.py
flexi/transform/: defcatalog.py  nldefcatalog.py  nldefexpansion.py
magma/: .gitignore  README.md  generate_combinations.py
magma/combinations/: DLTenMagma.gf  DLTenMagmaEng.gf  DMagma.gf  DMagmaEng.gf  XDLTenMagma.gf  XDLTenMagmaEng.gf  XDMagma.gf  XDMagmaEng.gf  XLTenMagma.gf  XLTenMagmaEng.gf  XMagma.gf  XMagmaEng.gf
magma/dollarmath/: DollarMath.gf  DollarMathConcr.gf
magma/magma/: Magma.gf  Magma.gfo  MagmaEng.gfo  MagmaFormula.gf  MagmaFormula.gfo  MagmaFormulaConcr.gf  MagmaFormulaConcr.gfo  MagmaFunctor.gf  MagmaFunctor.gfo
magma/testlex/: MDictEng.gf  MDictEng.gfo  TestEngLex.gfo  TestEngLexConcr.gf  TestEngLexConcr.gfo
magma/xml/: RglXml.gf  XmlConcr.gf  XmlMagmaEng.gf
testfiles/ftml/: positive-integer.en.html  quiver-walk.en.html
